<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/primaryColor2">

    <TextView
        android:textSize="20dp"
        android:textColor="@color/secondaryColor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt"
        android:layout_marginTop="50dp"/>

    <EditText
        android:layout_margin="10dp"
        android:background="@color/secondaryColor"
        android:id="@+id/text_entry"
        android:textColor="@color/tertiaryColor2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addButton"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/secondaryColor2"
        android:textColor="@color/tertiaryColor2"/>

    <Button
        android:id="@+id/raffle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/draw"
        android:background="@color/secondaryColor2"
        android:textColor="@color/tertiaryColor2"/>


    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginTop="25dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/secondaryColor2"
        android:textColor="@color/tertiaryColor2"/>

    <Button
        android:id="@+id/list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:layout_marginTop="25dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/secondaryColor2"
        android:textColor="@color/tertiaryColor2"/>
</LinearLayout>

